--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,13 @@
   margin: 1.5em !important;
   width: 22% !important;
 }
+
+.articles {
+  justify-content: center;
+}
+
+.table_align {
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
+}
